@@ -587,10 +587,6 @@ The plugin name is <code>METS</code> by default, and it uses MODS for descriptiv
 
   <p>DSpace has a set of command line tools for importing and exporting items in batches, using the DSpace simple archive format. The tools are not terribly robust, but are useful and are easily modified. They also give a good demonstration of how to implement your own item importer if desired.</p>
 
-  <h3>Warning: templates may be applied</h3>
-
-  <p>Due to a bug as of 1.2 beta 2, if you have an Item template in your Collection, then those default values may be added to Items that you import. Be sure to remove the template if this is unwanted behavior.</p>
-
   <h3>DSpace simple archive format</h3>
 
   <p>The basic concept behind the DSpace's simple archive format is to create an archive, which is directory full of items, with a subdirectory per item. Each item directory contains a file for the item's descriptive metadata, and the files that make up the item.</p>
